chore(): fixed dark mode color

--- a/src/styles/components/_core.scss
+++ b/src/styles/components/_core.scss
@@ -20,6 +20,7 @@ html[data-theme="dark"] {
     --ifm-color-primary-light: #33deb5;
     --ifm-color-primary-lighter: #3edfb9;
     --ifm-color-primary-lightest: #5ee5c5;
+    --ifm-color-content: #ffffff;
 }
 
 :root {
